--- a/Sprint1/style.css
+++ b/Sprint1/style.css
@@ -1,5 +1,6 @@
 :root {
     --color-primary: #FEC7D7;
+    --color-secundary:#A786DF;
     --font-family: "Nunito";
     --color-blue: #91C1D7;
     --color-green: #85D1CE;
@@ -9,8 +10,12 @@
     --bs-secondary: #0E172C;
 }
 
-#home {
+#home{
     background: var(--color-primary);
+    font-family: Nunito;
+    font-style: normal;
+}
+#detalle{
     font-family: Nunito;
     font-style: normal;
 }
@@ -72,6 +77,7 @@
     font-size: 16px;
     line-height: 24px;
     letter-spacing: 0.005em;
+    color: var(--color-gray);
 }
 
 .body1Bold {
@@ -107,6 +113,7 @@
     font-size: 11px;
     line-height: 15px;
     letter-spacing: 0.004em;
+    color:var(--color-gray)
 }
 
 .gradiente {
@@ -211,3 +218,37 @@ button:focus:not(:focus-visible) {
 }
 */
   
+/*Detalle mascota*/
+
+.btn-contactar {
+    width: 100%;
+    border-radius: 98px;
+    padding: 16px;
+    background: var(--color-black);
+}
+.carinoso, .inquieto, .jugueton{
+    border-style: solid;
+    border-color: var(--color-secundary)
+}
+.imagen-personalidad{
+    align-content: center;
+}
+.flotante-favorito{
+    position: absolute;
+    bottom: 586px;
+    right: 14px;
+    z-index: 100;
+}
+.flotante-atras{
+    position: absolute;
+    bottom: 744px;
+    right: 307px;
+    z-index: 100;
+}
+.descripcion-mascota {
+    position: absolute;
+    background-color: white;
+    top: 415px;
+    width: 100%;
+    border-radius: 16px 16px 0px 0px;
+}
