--- a/Sprint1/styles/detalle_mascota.css
+++ b/Sprint1/styles/detalle_mascota.css
@@ -9,7 +9,7 @@
     background: var(--color-black);
 }
 
-.carinoso, .inquieto, .jugueton {
+.carinoso, .inquieto, .jugueton, .curioso, .perezoso, .tranquilo, .aventurero, .paciente {
     border-style: solid;
     border-color: var(--color-secundary)
 }
@@ -26,7 +26,7 @@
 }
 .flotante-favorito {
     position: absolute;
-    bottom: 586px;
+    bottom: 686px;
     right: 14px;
     z-index: 100;
 }
