--- a/Sprint1/styles/principal.css
+++ b/Sprint1/styles/principal.css
@@ -84,3 +84,10 @@
     top: 93%;
     width: 100%;
 }
+.icono-activo{
+    width: 102px;
+    height: 40px;
+    top: 36px;
+    left: 24px;
+    margin-top: -7px;
+}
