--- a/Sprint1/styles/mensajes.css
+++ b/Sprint1/styles/mensajes.css
@@ -7,7 +7,7 @@
     border-radius: 8px;
 }
 
-.enlace-ver-mensaje{
+.enlace-ver-mensaje {
     text-decoration: none !important;
 }
 
@@ -35,6 +35,39 @@ body {
     margin-left: -32px;
 }
 
-.usuario{
+.usuario {
     color: #0E172C;
+}
+
+@media (min-width: 540px){
+    .titulo {
+        margin-top: 100px !important;
+        margin-bottom: 45px;
+        text-align: center;
+    }
+    .mensaje {
+        padding: 15px;
+        height: 90px;
+    }
+    .contenido-mensaje {
+        margin-top: -5px;
+    }
+    .contenedor-mensajes {
+        width: 80%;
+        background: #c3f0f4;
+        margin-left: 10%;
+        border-radius: 25px;
+        padding: 20px;
+    }
+    #imagen-contacto {
+        margin-top: -5px;
+        width: 68px;
+    }
+    .div-usuario{
+        width: 80%;
+        background: #c3f0f4;
+        margin-left: 10%;
+        border-radius: 25px;
+        padding: 20px;
+    }
 }
