--- a/Sprint1/styles/contenidoMensaje.css
+++ b/Sprint1/styles/contenidoMensaje.css
@@ -32,3 +32,35 @@
     padding-left: 0;
     padding-right: 0;
 }
+
+.flotante-atras {
+    position: absolute;
+    z-index: 100;
+    left: 24px;
+    top: 24px;
+}
+.header-contacto{
+    width: 100% !important;
+}
+
+@media (min-width: 540px){
+    .contenedor-mensajes {
+        width: 70%;
+        background: #c3f0f4;
+        margin-left: 15%;
+        border-radius: 25px;
+        padding: 20px;
+        margin-top: 4%;
+    }
+    .mensaje-enviado{
+        margin-left: 55%;
+        width: 40%;
+    }
+    .mensaje-recibido{
+        margin-left: 5%;
+        width: 40%;
+    }
+    .flotante-atras{
+        display: none;
+    }
+}
