--- a/Sprint1/styles/index.css
+++ b/Sprint1/styles/index.css
@@ -59,6 +59,68 @@
     padding-right: 40px;
 }
 
+.mascotas{
+    width: 50%;
+}
+
+@media (min-width: 540px){
+    .titulo {
+        text-align: center;
+        margin-top: 100px !important;
+        margin-bottom: 45px;
+    }
+    .btn-categorias {
+        text-align: center;
+        margin-bottom: 70px;
+    }
+    .icono-gato, .icono-perro {
+        margin-left: 30px;
+        margin-right: 14px;
+        width: 65px;
+    }
+    #imagen-perro, #imagen-gato {
+        padding-top: 14px;
+        margin-left: 0px;
+    }
+    .btn-perro, .btn-gato {
+        width: 300px;
+        height: 105px;
+    }
+    .div-categorias {
+        margin-bottom: 55px;
+    }
+    /**/
+    .card-img {
+        width: 200px;
+        height: 300px;
+    }
+    .columna1, .columna2 {
+        margin-left: 165px;
+        margin-right: 135px;
+        width: 324px !important;
+    }
+    .card-img-overlay{
+        width: 200px !important;;
+        height: 300px!important; ; 
+    }
+    .card-title {
+        margin-top: 115%;
+    }
+    .grid-mascotas{
+        justify-content: center;
+    }
+    .btn-modal{
+        width: 345px !important;
+    padding: 26px !important;
+    }
+    .div-btn-modal{
+        text-align: center;
+    }
+    .mascotas{
+        width: 20%;
+    }
+}
+
 p {
     font-weight: bold;
     font-size: 16px;
@@ -93,12 +155,13 @@ button:focus:not(:focus-visible) {
     border-radius: 70px;
 }
 
-.card-img-overlay{
+.card-img-overlay {
     box-shadow: inset 0px -51px 40px -15px #000000;
     height: 250px;
     width: 156px;
     border-radius: 16px;
 }
+
 /*
 #staticBackdrop1 {
     position: absolute;
